<resources>
    <string name="app_name">Car Laon Calculater</string>
    <string name="car_price">Car Price</string>
    <string name="downpayment">Down Payment</string>
    <string name="loan_period">Loan Period</string>
    <string name="interest_rate">Interest Rate(%)</string>
    <string name="loan">Loan : </string>
    <string name="interest">Interest : </string>
    <string name="monthly_repayment">Monthly payment :</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
</resources>
