<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layoutpadding"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextCarPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/car_price"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextDownPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/downpayment"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextLoanPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loan_period"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextInterestRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/interest_rate"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewLoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loan"
        android:textSize="@dimen/frontsize" />

    <TextView
        android:id="@+id/textViewInterest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interest"
        android:textSize="@dimen/frontsize" />

    <TextView
        android:id="@+id/textViewMonthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monthly_repayment"
        android:textSize="@dimen/frontsize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="resetInput"
            />
    </LinearLayout>

</LinearLayout>